[gd_scene load_steps=25 format=3 uid="uid://bm6k25sqimdfc"]

[ext_resource type="Script" uid="uid://1xuxgoaaj3fw" path="res://scripts/shop/bird_npc.gd" id="1_im5bs"]
[ext_resource type="Texture2D" uid="uid://bac6a012pavbq" path="res://assets/gui/dialogue_prompt.png" id="2_rloqc"]
[ext_resource type="Texture2D" uid="uid://crvm1ljqgl3k1" path="res://assets/gui/e.png" id="3_2n4no"]
[ext_resource type="Texture2D" uid="uid://ckcwdclc223qp" path="res://assets/spritesheets/m_shadow.png" id="4_u7a38"]
[ext_resource type="Texture2D" uid="uid://c1arwu0w5lbr6" path="res://assets/spritesheets/birb.png" id="5_g8xyv"]
[ext_resource type="Texture2D" uid="uid://bumwg17lvmygl" path="res://assets/rooms/stick.png" id="6_3yewc"]
[ext_resource type="AudioStream" uid="uid://dhequooybrqsv" path="res://assets/sounds/sfx/Untitled song (5).mp3" id="7_rloqc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_06ctt"]
atlas = ExtResource("2_rloqc")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmpsx"]
atlas = ExtResource("2_rloqc")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkgqk"]
atlas = ExtResource("2_rloqc")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_02eap"]
atlas = ExtResource("2_rloqc")
region = Rect2(24, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqw3h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_06ctt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmpsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkgqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02eap")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_kmpsx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractPromptTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -13)]
}

[sub_resource type="Animation" id="Animation_06ctt"]
resource_name = "new_animation"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractPromptTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(1, -13), Vector2(1, -14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pkgqk"]
_data = {
&"RESET": SubResource("Animation_kmpsx"),
&"new_animation": SubResource("Animation_06ctt")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v7twi"]
radius = 2.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_eugwk"]
atlas = ExtResource("5_g8xyv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7twi"]
atlas = ExtResource("5_g8xyv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky2u8"]
atlas = ExtResource("5_g8xyv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gsek"]
atlas = ExtResource("5_g8xyv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pkgqk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eugwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7twi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ky2u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gsek")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="Gradient" id="Gradient_v7twi"]
offsets = PackedFloat32Array(0.23301, 0.325243, 0.621359)
colors = PackedColorArray(0.328972, 0.429854, 0.581464, 1, 0.221948, 0.327865, 0.442296, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v7twi"]
gradient = SubResource("Gradient_v7twi")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkgqk"]
size = Vector2(46, 46)

[node name="Bird_NPC" type="CharacterBody2D"]
script = ExtResource("1_im5bs")

[node name="DialoguePrompt" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -13)
sprite_frames = SubResource("SpriteFrames_qqw3h")
autoplay = "default"
frame_progress = 0.0789023

[node name="InteractPromptTexture" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -13)
texture = ExtResource("3_2n4no")

[node name="AnimationPlayer" type="AnimationPlayer" parent="InteractPromptTexture"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_pkgqk")
}
autoplay = "new_animation"

[node name="MShadow" type="Sprite2D" parent="."]
position = Vector2(-1, 3)
texture = ExtResource("4_u7a38")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v7twi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_pkgqk")
autoplay = "default"
frame = 1
frame_progress = 0.0470907

[node name="Stick" type="Sprite2D" parent="."]
position = Vector2(-5, 9)
texture = ExtResource("6_3yewc")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(0.625, 0.625)
texture = SubResource("GradientTexture2D_v7twi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pkgqk")

[node name="Menu_Open" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rloqc")
volume_db = -10.0
bus = &"sfx"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
